--- a/cli/src/app/features/auth/register/register.component.html
+++ b/cli/src/app/features/auth/register/register.component.html
@@ -5,9 +5,11 @@
     <!-- Logo -->
     <div class="flex justify-center">
       <div
-        class="w-12 h-12 bg-gradient-to-r from-blue-500 to-purple-600 rounded-lg flex items-center justify-center"
+        class="w-20 h-20 bg-gradient-to-r from-blue-500 to-purple-600 rounded-lg flex items-center justify-center"
       >
-        <span class="text-white font-bold text-xl">L</span>
+        <span class="text-white font-bold text-xl"
+          ><img src="programming_icon.ico" alt=""
+        /></span>
       </div>
     </div>
     <h2
