chat fix -front

--- a/cli/src/app/shared/layout/main-layout/main-layout.component.html
+++ b/cli/src/app/shared/layout/main-layout/main-layout.component.html
@@ -9,7 +9,7 @@
       <router-outlet></router-outlet>
     </div>
   </main>
-  <app-footer *ngIf="!currentUrl.startsWith('/forum')"></app-footer>
+  <app-footer *ngIf="!currentUrl.startsWith('/chat')"></app-footer>
 
   <!-- Back to Top Button -->
   <app-back-to-top></app-back-to-top>
