--- a/cli/src/app/shared/layout/main-layout/main-layout.component.html
+++ b/cli/src/app/shared/layout/main-layout/main-layout.component.html
@@ -1,6 +1,6 @@
 <app-header *ngIf="!currentUrl.startsWith('/forum')"></app-header>
 <div
-  class="min-h-screen bg-gray-50 dark:bg-gray-900 flex flex-col transition-colors duration-200"
+  class="bg-gray-50 dark:bg-gray-900 flex flex-col transition-colors duration-200"
 >
   <main
     class="flex-1 bg-gray-50 dark:bg-gray-900 transition-colors duration-200"
