--- a/cli/src/app/features/chat/chat.component.html
+++ b/cli/src/app/features/chat/chat.component.html
@@ -1,5 +1,5 @@
 <!-- Main Chat Layout -->
-<div class="flex h-screen bg-gray-100 dark:bg-gray-900 overflow-hidden">
+<div class="chat-container flex bg-gray-100 dark:bg-gray-900">
   <!-- Chat Sidebar -->
   <div
     [ngClass]="{
@@ -33,7 +33,7 @@
   ></div>
 
   <!-- Main Chat Area -->
-  <div class="flex-1 flex flex-col min-h-0">
+  <div class="chat-main-area flex-1">
     <!-- Mobile Header -->
     <div
       *ngIf="isMobileView"
@@ -67,12 +67,12 @@
     </div>
 
     <!-- Chat Content -->
-    <div class="flex-1 overflow-hidden">
+    <div class="flex-1 min-h-0 position-relative">
       <ng-container *ngIf="currentUser; else notAuthenticated">
         <ng-container *ngIf="selectedRoom; else noChatSelected">
           <!-- Chat Main Component -->
           <app-chat-main
-            class="flex-1 min-h-0"
+            class="h-full w-full"
             [room]="selectedRoom"
             [messages]="getRoomMessages(selectedRoom.id)"
             [currentUser]="currentUser!"
